ignore files generated from autotools

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 orbits
 *~
+Makefile
+Makefile.in
+aclocal.m4
+ar-lib
+autom4te.cache/
+compile
+config.log
+config.status
+configure
+depcomp
+install-sh
+missing
+src/.deps/
+src/Makefile
+src/Makefile.in
+
